--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -1,9 +1,15 @@
-.Article_Wrapper {
+.article-wrapper {
   width: 100%;
+  height: 100%;
   position: relative;
   display: flex;
   overflow: hidden;
   background-color: #fff;
+}
+
+body,
+#root {
+  overflow: hidden;
 }
 
 .article-preview {
@@ -223,6 +229,7 @@
 
 .article-preview_mobile {
   padding: 16px;
+  padding-bottom: 100px;
 }
 
 .article_no_catalog {
