--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -1,28 +1,24 @@
 .article-wrapper {
-  width: 100%;
-  height: 100%;
   position: relative;
   display: flex;
-  overflow: hidden;
   background-color: #fff;
-}
-
-body,
-#root {
+  padding: 0;
+  margin-top: 58px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
 .article-preview {
   width: calc(100% - 224px);
   max-width: 850px;
-  height: 100vh;
+  height: 100%;
   flex-shrink: 0;
   background-color: #fff;
   box-sizing: border-box;
-  overflow-y: scroll;
-  overflow-x: hidden;
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
+  overflow-y: scroll;
   padding: 0 36px;
   padding-bottom: 60px;
 }
@@ -229,7 +225,6 @@ body,
 
 .article-preview_mobile {
   padding: 16px;
-  padding-bottom: 100px;
 }
 
 .article_no_catalog {
@@ -302,5 +297,5 @@ body,
 }
 
 .article-preview_mobile .footer-wrapper {
-  margin-bottom: 100px;
+  margin-bottom: 32px;
 }
