mobile: simditor add save float button

--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -156,7 +156,8 @@
   box-sizing: border-box;
 }
 
-.article-html img[data-emoji] {
+.article-html img[data-emoji],
+.article-html img[data-non-image] {
   width: 28px;
   height: 28px;
   display: inline-block;
