--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -888,7 +888,7 @@
 .editor-style blockquote {
   border-left: 6px solid #ddd;
   padding: 5px 0 5px 10px;
-  margin: 15px 0 15px 15px;
+  margin: 15px 0 15px 0;
 }
 
 .simditor .simditor-body blockquote> :first-child,
