--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -302,10 +302,13 @@
 
 .simditor-toolbar_mobile {
   min-width: 100%;
-  top: 0;
   background-color: #f9f9f9;
   border-bottom: 1px solid #d9d9d9;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.08);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: auto;
 }
 
 .simditor-toolbar>ul>li {
@@ -703,13 +706,14 @@
 
 .simditor-mobile {
   padding-top: 0;
-  -webkit-overflow-scrolling: touch;
   min-width: 100%;
-  height: 100vh;
+  height: auto;
+  overflow: inherit;
 }
 
 .simditor-mobile .simditor-wrapper {
   background: #fff;
+  min-height: 100%;
 }
 
 .simditor-mobile .simditor-wrapper .simditor-body {
