--- a/app/common/loading/index.css
+++ b/app/common/loading/index.css
@@ -1,166 +1,24 @@
 .loading {
+  position: fixed;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  top: 58px;
+  left: 0;
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #e8e8e8;
+  transition: all linear 0.2s;
+}
+
+.loading-hide {
+  opacity: 0;
+}
+
+.loading>img {
+  width: 100px;
   position: relative;
-  transform: scale(0.4);
-  background: #f5d4a1;
-}
-
-.loading-item {
-  list-style-type: none;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 20px;
-  height: 20px;
-  background: inherit;
-  border-radius: 50%;
-}
-
-.loading-item-1 {
-  animation: a 1s ease-in-out infinite;
-  top: -40px;
-  left: -40px;
-}
-
-.loading-item-2 {
-  animation: b 1s ease-in-out infinite;
-  top: -40px;
-  left: 0px;
-}
-
-.loading-item-3 {
-  animation: c 1s ease-in-out infinite;
-  top: -40px;
-  left: 40px;
-}
-
-.loading-item-4 {
-  animation: d 1s ease-in-out infinite;
-  top: 0px;
-  left: -40px;
-}
-
-.loading-item-5 {
-  animation: e 1s ease-in-out infinite;
-  top: 0px;
-  left: 0px;
-}
-
-.loading-item-6 {
-  animation: f 1s ease-in-out infinite;
-  top: 0px;
-  left: 40px;
-}
-
-.loading-item-7 {
-  animation: g 1s ease-in-out infinite;
-  top: 40px;
-  left: -40px;
-}
-
-.loading-item-8 {
-  animation: h 1s ease-in-out infinite;
-  top: 40px;
-  left: 0px;
-}
-
-.loading-item-9 {
-  animation: i 1s ease-in-out infinite;
-  top: 40px;
-  left: 40px;
-}
-
-@keyframes a {
-  50% {
-    top: 0px;
-    left: -40px;
-  }
-
-  100% {
-    top: 0px;
-    left: -40px;
-  }
-}
-
-@keyframes b {
-  50% {
-    top: -40px;
-    left: -40px;
-  }
-
-  100% {
-    top: -40px;
-    left: -40px;
-  }
-}
-
-@keyframes c {
-  50% {
-    top: -40px;
-    left: 0px;
-  }
-
-  100% {
-    top: -40px;
-    left: 0px;
-  }
-}
-
-@keyframes d {
-  50% {
-    top: 40px;
-    left: -40px;
-  }
-
-  100% {
-    top: 40px;
-    left: -40px;
-  }
-}
-
-@keyframes f {
-  50% {
-    top: -40px;
-    left: 40px;
-  }
-
-  100% {
-    top: -40px;
-    left: 40px;
-  }
-}
-
-@keyframes g {
-  50% {
-    top: 40px;
-    left: 0px;
-  }
-
-  100% {
-    top: 40px;
-    left: 0px;
-  }
-}
-
-@keyframes h {
-  50% {
-    top: 40px;
-    left: 40px;
-  }
-
-  100% {
-    top: 40px;
-    left: 40px;
-  }
-}
-
-@keyframes i {
-  50% {
-    top: 0px;
-    left: 40px;
-  }
-
-  100% {
-    top: 0px;
-    left: 40px;
-  }
+  top: -58px;
 }
