--- a/app/public/prism/prism.css
+++ b/app/public/prism/prism.css
@@ -39,11 +39,11 @@ pre[class*="language-"],
 pre[class*="language-"] {
   border-radius: .5em;
   border: .2em solid hsl(0, 0%, 33%);
-  /* #282A2B */
   box-shadow: 1px 1px .5em black inset;
   margin: .5em 0;
-  overflow: auto;
-  padding: 1em;
+  /* overflow: auto; */
+  padding: 12px;
+  font-size: 15px;
 }
 
 pre[class*="language-"]::-moz-selection {
