--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -10,7 +10,7 @@
 }
 
 .article-preview {
-  width: calc(100% - 224px);
+  width: calc(100% - 424px);
   max-width: 1160px;
   height: 100%;
   flex-shrink: 0;
@@ -305,6 +305,7 @@
 
 .article-html pre {
   position: relative;
+  overflow-y: scroll;
 }
 
 .article-html pre:hover>.code-tooltip {
