feat: fix p css

--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -1089,7 +1089,7 @@
   margin: 4px;
 }
 
-.simditor .simditor-body p {
+/* .simditor .simditor-body p {
   display: flex;
   align-items: center;
-}
+} */
