--- a/app/components/search/index.css
+++ b/app/components/search/index.css
@@ -1,4 +1,4 @@
-.Search{
+.Search {
   width: 200px;
   height: 32px;
   display: flex;
@@ -8,14 +8,18 @@
   border-radius: 4px;
   overflow: hidden;
 }
-.Search i{
+
+.Search i {
   margin-left: 10px;
   margin-right: 10px;
 }
-.Search_input{
+
+.search-input {
+  width: 100%;
   border: none;
   background: #f5f5f5;
   height: 100%;
   color: #595959;
   font-size: 14px;
+  padding-right: 16px;
 }
