--- a/app/components/book-catalog/index.css
+++ b/app/components/book-catalog/index.css
@@ -39,13 +39,29 @@
 }
 
 .bookcatalog {
-  /* width: 100%; */
+  width: 100%;
   height: 28px;
   line-height: 28px;
   color: #595959;
   font-size: 12px;
+  position: relative;
 }
 
 .bookcatalog-item__parent {
   font-weight: bold;
 }
+
+.bookcatalog-setting {
+  position: absolute;
+  right: 0;
+  top: 1px;
+  /* display: none; */
+}
+
+.bookcatalog-setting:hover>.Icon {
+  color: rgb(37, 184, 100);
+}
+
+/* .bookcatalog-wrapper:hover .bookcatalog-setting {
+  display: block;
+} */
