--- a/app/components/table-header/index.css
+++ b/app/components/table-header/index.css
@@ -10,7 +10,7 @@
   z-index: 1;
 }
 
-.TableHeader_Title {
+.table-header__title {
   color: #262626;
   font-size: 14px;
   cursor: pointer;
@@ -22,7 +22,7 @@
   margin-left: 4px;
 }
 
-.TableHeader_Right>.Button {
+.table-header__right>.Button {
   margin-left: 10px;
 }
 
