--- a/app/common/list/index.css
+++ b/app/common/list/index.css
@@ -6,7 +6,7 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
 }
 
-.List {
+.list {
   height: 32px;
   line-height: 32px;
   padding: 0 14px;
@@ -19,16 +19,21 @@
   display: flex;
 }
 
-.List>.Icon {
+.list[data-disabled=true] {
+  cursor: not-allowed;
+  opacity: 0.4;
+}
+
+.list>.Icon {
   font-size: 15px;
   top: 2px;
   margin-right: 7px;
 }
 
-.List_Checked {
+.list-checked {
   background: #f5f5f5;
 }
 
-.List:hover {
+.list:not([data-disabled=true]):hover {
   background-color: #e9f7ec;
 }
