feat: change user setting

--- a/app/common/table/index.css
+++ b/app/common/table/index.css
@@ -49,7 +49,7 @@
   color: #e8e8e8;
 }
 
-.Table_Actions {
+.table-actions {
   color: rgb(16, 142, 233);
   cursor: pointer;
   display: inline-block;
