--- a/app/public/css/anima.css
+++ b/app/public/css/anima.css
@@ -132,14 +132,13 @@
 
 @keyframes slideInDown {
   from {
-    -webkit-transform: translate3d(-50%, -100%, 0);
-    transform: translate3d(-50%, -100%, 0);
-    visibility: visible;
+    transform: translate3d(0, calc(-100% + 20px), 0);
+    opacity: 0.6;
   }
 
   to {
-    -webkit-transform: translate3d(-50%, 0, 0);
-    transform: translate3d(-50%, 0, 0);
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
 
