feat: 新增从模版创建文档功能

--- a/app/common/modal/index.css
+++ b/app/common/modal/index.css
@@ -1,4 +1,4 @@
-.Modal {
+.modal {
   max-width: calc(100vw - 16px);
   position: fixed;
   background: #ffffff;
@@ -82,6 +82,6 @@
   margin-left: 10px;
 }
 
-.body-scroll_hiddlen{
+.body-scroll_hiddlen {
   overflow: hidden;
 }
