--- a/app/components/book-catalog/index.css
+++ b/app/components/book-catalog/index.css
@@ -102,3 +102,59 @@
 .bookcatalog-item__setting-open {
   display: block;
 }
+
+.template-wrapper {
+  display: flex;
+}
+
+.template {
+  width: 160px;
+  border: 1px solid #e8e8e8;
+  background: #fff;
+  cursor: pointer;
+  border-radius: 2px;
+  padding: 8px;
+  position: relative;
+  flex-shrink: 0;
+  margin: 0 6px;
+  transition: all linear 0.2s;
+}
+
+.template:hover {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .05);
+  border: 2px solid rgba(37, 184, 100, .3);
+  padding: 7px;
+}
+
+.template>img {
+  width: 100%;
+  height: auto;
+}
+
+.template>p {
+  text-align: center;
+  color: #595959;
+  font-size: 12px;
+}
+
+.template-button {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.template:hover>.template-button {
+  opacity: 1;
+}
+
+.template-button>.button {
+  width: 78%;
+  margin-bottom: 12px;
+}
