--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -17,6 +17,8 @@
   justify-content: center;
   flex-shrink: 0;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .button-loading {
@@ -41,14 +43,14 @@
   border-color: #25b864;
 }
 
-.Button_default:not(.Button_disabled):not(.button-loading):hover {
+.button-default:not(.Button_disabled):not(.button-loading):hover {
   background-image: linear-gradient(0deg, #f5f5f5, #fff);
   background: #fafafa;
   color: #47c479;
   border-color: #47c479;
 }
 
-.Button_default:not(.Button_disabled):not(.button-loading):active {
+.button-default:not(.Button_disabled):not(.button-loading):active {
   color: #16914f;
   background-color: #fafafa;
   border-color: #16914f;
