--- a/app/components/table-header/index.css
+++ b/app/components/table-header/index.css
@@ -26,8 +26,6 @@
   margin-left: 10px;
 }
 
-.table-header-mobile {}
-
 .table-header-mobile>.Search {
   width: 100%;
   height: 46px;
@@ -38,5 +36,13 @@
 .table-header-mobile-head {
   justify-content: space-between;
   padding: 10px 14px;
-  border: 1px solid #e8e8e8;
+  border-top: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.table-header-mobile>.search {
+  width: 100%;
+  height: 42px;
+  border-bottom: 1px solid #e8e8e8;
+  border-radius: 0;
 }
