feat: modal 新增键盘esc和enter控制

--- a/app/common/breadcrumb/index.css
+++ b/app/common/breadcrumb/index.css
@@ -1,3 +1,8 @@
+.breadcrumb {
+  display: flex;
+  align-items: center;
+}
+
 .breadcrumb-item {
   color: #595959;
   font-size: 14px;
@@ -6,6 +11,9 @@
 .breadcrumb-item>a {
   color: #595959;
   font-size: 14px;
+}
+
+.breadcrumb-mobile>.breadcrumb-item>a {
   max-width: 190px;
 }
 
