--- a/app/common/modal/index.css
+++ b/app/common/modal/index.css
@@ -65,6 +65,7 @@
   line-height: 1.5;
   word-wrap: break-word;
   padding: 0 24px 20px 24px;
+  min-width: 400px;
   max-height: 400px;
   overflow-y: scroll;
 }
