--- a/app/components/content-layout/index.css
+++ b/app/components/content-layout/index.css
@@ -6,7 +6,7 @@
 .content-layout__head {
   height: 32px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   margin-bottom: 10px;
 }
