--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -11,7 +11,7 @@
 
 .article-preview {
   width: calc(100% - 424px);
-  margin-left: 214px;
+  margin-left: 224px;
   max-width: 1160px;
   height: 100%;
   flex-shrink: 0;
@@ -34,7 +34,6 @@
 }
 
 .article_catalog {
-  padding-top: 0;
   position: fixed;
   padding-top: 60px;
 }
@@ -317,7 +316,19 @@
 }
 
 .article-html pre {
-  overflow-y: scroll;
+  display: inline-flex;
+  align-items: center;
+  padding: 12px 0;
+}
+
+.article-pre__box {
+  border-radius: .5em;
+  border: .2em solid hsl(0, 0%, 33%);
+  box-shadow: 1px 1px .5em black inset;
+  margin: .5em 0;
+  font-size: 15px;
+  overflow-x: scroll;
+  background: hsl(0, 0%, 8%);
   position: relative;
 }
 
