--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -332,7 +332,7 @@
   position: relative;
 }
 
-.article-html pre:hover>.code-tooltip {
+.article-pre__box:hover>.code-tooltip {
   display: flex;
 }
 
