--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -21,6 +21,10 @@
   align-items: center;
 }
 
+.button-mobile {
+  transform: scale(0.9);
+}
+
 .button-loading {
   opacity: 0.5;
   cursor: not-allowed;
@@ -43,37 +47,37 @@
   border-color: #25b864;
 }
 
-.button-default:not(.Button_disabled):not(.button-loading):hover {
+.button-default:not(.button-disabled):not(.button-loading):hover {
   background-image: linear-gradient(0deg, #f5f5f5, #fff);
   background: #fafafa;
   color: #47c479;
   border-color: #47c479;
 }
 
-.button-default:not(.Button_disabled):not(.button-loading):active {
+.button-default:not(.button-disabled):not(.button-loading):active {
   color: #16914f;
   background-color: #fafafa;
   border-color: #16914f;
 }
 
-.button-primary:not(.Button_disabled):hover {
+.button-primary:not(.button-disabled):hover {
   color: #fff;
   background-color: #47c479;
   border-color: #47c479;
 }
 
-.button-primary:not(.Button_disabled):active {
+.button-primary:not(.button-disabled):active {
   color: #fff;
   background-color: #16914f;
   border-color: #16914f;
 }
 
-.Button_disabled {
+.button-disabled {
   cursor: not-allowed;
   opacity: 0.4;
 }
 
-.Button_disabled>a {
+.button-disabled>a {
   cursor: not-allowed;
 }
 
