--- a/app/components/header-article/index.css
+++ b/app/components/header-article/index.css
@@ -9,7 +9,7 @@
 }
 
 .article-header_content {
-    max-width: 1242px;
+    /* max-width: 1242px; */
     min-width: 700px;
     height: 58px;
     will-change: margin;
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
+    padding: 0 22px;
 }
 
 .article-header_content_Hide {
