--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -819,6 +819,10 @@
   margin: 0;
 }
 
+.simditor .simditor-body p {
+  margin-bottom: 2px;
+}
+
 .simditor .simditor-body b,
 .simditor .simditor-body strong,
 .editor-style b,
@@ -923,7 +927,7 @@
 .simditor .simditor-body pre,
 .editor-style pre {
   padding: 10px 5px 10px 10px;
-  margin: 15px 0;
+  margin: 6px 0;
   display: block;
   line-height: 18px;
   background: #F0F0F0;
