--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -331,6 +331,10 @@
   overflow: hidden;
 }
 
+.article-html_mobile .article-pre__box {
+  padding: 0 6px;
+}
+
 .code-tooltip {
   position: absolute;
   right: 0;
@@ -345,9 +349,6 @@
 }
 
 .code-tooltip__item {
-  min-width: 42px;
-  min-height: 40px;
-  padding: 4px;
   border: 1px solid rgba(226, 226, 226, 0.84);
   box-shadow: 0px 2px 4px 0px rgba(225, 225, 225, 0.5);
   background: #fff;
@@ -367,7 +368,7 @@
 }
 
 .code-tooltip__item-tooltip>img {
-  width: 26px;
+  width: 20px;
   transition: all linear 0.2s;
   border-radius: 2px;
 }
