--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -107,8 +107,7 @@
   font-size: 16px;
 }
 
-.article-html .xigua-inline__code {
-  color: #c7254e;
+.article-html code {
   background-color: #f9f2f4;
   border-radius: 4px;
   padding: 2px 4px;
