--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -328,6 +328,7 @@
   padding: 0 12px;
   position: relative;
   overflow: hidden;
+  margin-bottom: 0.56em;
 }
 
 .article-html_mobile .article-pre__box {
