feat: 编辑页新增退出保存功能

--- a/app/common/dropdown/index.css
+++ b/app/common/dropdown/index.css
@@ -24,10 +24,12 @@
 }
 
 .Dropdown_Overlay {
+  width: 100%;
   display: none;
   box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
   border-radius: 4px;
   position: absolute;
+  z-index: 1;
   top: 100%;
   left: 0;
 }
