bugfix: 修复创建后的快捷项缺少order_num问题

--- a/app/components/shortcut-entrance/index.css
+++ b/app/components/shortcut-entrance/index.css
@@ -1,3 +1,8 @@
+.shortcut-entrance {
+  transition: height linear 0.2s;
+  will-change: height;
+}
+
 .shortcut-entrance__head {
   color: #262626;
   font-weight: bold;
