bugfix: 修复快捷入口拖动排序bug

--- a/app/components/shortcut-entrance/index.css
+++ b/app/components/shortcut-entrance/index.css
@@ -1,6 +1,7 @@
 .shortcut-entrance {
   transition: height linear 0.2s;
   will-change: height;
+  user-select: none;
 }
 
 .shortcut-entrance__head {
