--- a/app/common/list/index.css
+++ b/app/common/list/index.css
@@ -1,6 +1,7 @@
 .list-wrapper {
   display: inline-block;
-  width: 100%;
+  /* width: 100%; */
+  width: auto;
   padding: 4px 0;
   background-color: #fff;
   border-radius: 4px;
