--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -14,6 +14,10 @@
   cursor: pointer;
 }
 
+.recent-content__mobile>.recent-content__right {
+  padding-right: 0;
+}
+
 .recent-content__deleted {
   cursor: default;
 }
