--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -723,11 +723,12 @@
   width: 100%;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 12px;
+  padding: 6px;
   padding-top: 0;
   box-shadow: none;
   border: none;
   overflow-x: hidden;
+  font-size: 14px;
 }
 
 .simditor .simditor-body a,
